# OS-labs-2023

./: CMakeLists.txt  README.md
CP/: CMakeLists.txt  a.out  b.out  client.cpp  server.cpp
CP/data/: users.db
CP/include/: client.hpp  common.hpp  game.hpp  server.hpp
CP/src/: client.cpp  game.cpp  manager.cpp  server.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/src/: child.cpp  parent.cpp
lab1/test/: test.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Experiment.hpp
lab2/src/: Experiment.cpp
lab2/test/: test.cpp
lab3/include/: parent.hpp
lab3/src/: child.cpp  parent.cpp
lab4/: CMakeLists.txt  main1.cpp  main2.cpp
lab4/include/: lib.h
lab4/src/: implementation1.c  implementation2.c
lab5/: CMakeLists.txt
lab5/include/: computer.hpp  manager.hpp  socket.hpp  tree.hpp
lab5/src/: computer.cpp  manager.cpp  socket.cpp  tree.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_dynamic_test.cpp  lab4_implementation1_test.cpp  lab4_implementation2_test.cpp
